# epubtts

./: .gitignore  README.md  benchmark_chunks.py  main.py  pyproject.toml
src/: audio_generator.py  audio_utils.py  chapter_selector.py  constants.py  epub_parser.py  progress_manager.py  text_processing.py  tts_backend.py
tests/: test_audio_utils.py  test_constants.py  test_epub_parser.py  test_progress_manager.py  test_text_processing.py
